# kiro-repo

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml
scripts/: build-kiro-repo.sh  build_helpers.py  force-rebuild.sh  migrate_dynamodb_schema.py
src/: __init__.py  aws_permissions.py  config.py  config_manager.py  instructions_generator.py  main.py  metadata_client.py  models.py  notification_service.py  package_downloader.py  package_router.py  repository_builder.py  s3_publisher.py  utils.py  version_manager.py
terraform/: cloudfront.tf  cloudwatch.tf  dynamodb.tf  lambda.tf  main.tf  route53.tf  s3.tf  sns.tf  terraform.tfvars.example  variables.tf
tests/: test_build_helpers.py  test_config_manager.py  test_instructions_generator.py  test_kiro_handler.py  test_kiro_repo_handler.py  test_main_handler.py  test_metadata_client.py  test_metadata_validation.py  test_migrate_dynamodb_schema.py  test_package_router.py  test_property_all_packages_included.py  test_property_convenience_copy.py  test_property_download_integrity.py  test_property_dynamodb_storage.py  test_property_installation_instructions.py  test_property_latest_version.py  test_property_logging_completeness.py  test_property_main_handler.py  test_property_metadata.py  test_property_multi_package_storage.py  test_property_package_metadata_completeness.py  test_property_package_query_by_name.py  test_property_packages_entry.py  test_property_permission_validation.py  test_property_pool_directory.py  test_property_release_checksums.py  test_property_release_metadata.py  test_property_s3_paths.py  (+9 more)
(+21 files in other folders)
