[project]
name = "debian-repo-manager"
version = "0.1.0"
description = "Automated Debian repository manager for Kiro IDE releases"
authors = [{name = "Kiro Team"}]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.88.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
